# mm3d-archipelago

./: .gitignore  DESIGN.md  README.md  pyproject.toml  requirements.txt
src/mm3d_archipelago/: archipelago_client.py  citra.py  cli.py  config.py
tests/: test_archipelago_client.py  test_cli.py
worlds/mm3d/: Items.py  Locations.py  Options.py  Regions.py  Rules.py  __init__.py  archipelago.json
