[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mm3d-archipelago"
version = "0.1.0"
description = "Archipelago integration for Majora's Mask 3D (Citra-focused MVP)."
authors = [ { name = "WinkSotmas" } ]
dependencies = ["click", "PyYAML"]
